{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 138,
  "lineage": "51c4a2dd-617a-e5f0-bb40-09fa752ef5f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:364203099100:loadbalancer/app/AWS-ALB/50cb9d29581bf6b3",
            "arn_suffix": "app/AWS-ALB/50cb9d29581bf6b3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "AWS-ALB-867912244.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:364203099100:loadbalancer/app/AWS-ALB/50cb9d29581bf6b3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "AWS-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0273d539ada446d84"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01581b5254c1519ad"
              },
              {
                "subnet_id": "subnet-0323d6d1136f5129c"
              },
              {
                "subnet_id": "subnet-0e882366ac52354e6"
              }
            ],
            "subnets": [
              "subnet-01581b5254c1519ad",
              "subnet-0323d6d1136f5129c",
              "subnet-0e882366ac52354e6"
            ],
            "vpc_id": "vpc-0f9b9a3be77697c2c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ALB",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:364203099100:listener/app/AWS-ALB/50cb9d29581bf6b3/2e83201ef5900982",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:364203099100:listener/app/AWS-ALB/50cb9d29581bf6b3/2e83201ef5900982",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:364203099100:loadbalancer/app/AWS-ALB/50cb9d29581bf6b3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.example",
            "aws_security_group.ALB",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:364203099100:targetgroup/tf-lb-tg/2d64f720bd7273d2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:364203099100:listener-rule/app/AWS-ALB/50cb9d29581bf6b3/2e83201ef5900982/e4f9fc307e32215f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:364203099100:listener-rule/app/AWS-ALB/50cb9d29581bf6b3/2e83201ef5900982/e4f9fc307e32215f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:364203099100:listener/app/AWS-ALB/50cb9d29581bf6b3/2e83201ef5900982",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.example",
            "aws_alb_listener.example",
            "aws_lb_target_group.lb-tg",
            "aws_security_group.ALB",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:364203099100:targetgroup/tf-lb-tg/2d64f720bd7273d2",
            "arn_suffix": "targetgroup/tf-lb-tg/2d64f720bd7273d2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:364203099100:targetgroup/tf-lb-tg/2d64f720bd7273d2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-lb-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:security-group/sg-0273d539ada446d84",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0273d539ada446d84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-sg",
            "name_prefix": "",
            "owner_id": "364203099100",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:security-group/sg-0989dc56784a6985a",
            "description": "Allow tcp inbound traffic on port 5000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0989dc56784a6985a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "webapp-ASG-sg",
            "name_prefix": "",
            "owner_id": "364203099100",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:network-acl/acl-0ce4890b28e702605",
            "default_network_acl_id": "acl-0ce4890b28e702605",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ce4890b28e702605",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "364203099100",
            "subnet_ids": [
              "subnet-01581b5254c1519ad",
              "subnet-0323d6d1136f5129c",
              "subnet-06ba1e3c99e5b864d",
              "subnet-0bda508e6425496e1",
              "subnet-0db02f391a215cdde",
              "subnet-0e882366ac52354e6"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Prod-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:route-table/rtb-0666a16660f8f96a5",
            "default_route_table_id": "rtb-0666a16660f8f96a5",
            "id": "rtb-0666a16660f8f96a5",
            "owner_id": "364203099100",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Prod-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:security-group/sg-0b86454c51935fc37",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b86454c51935fc37",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "364203099100",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Prod-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058681aa48582869e",
            "association_id": "eipassoc-004f921cf61151414",
            "domain": "vpc",
            "id": "eipalloc-058681aa48582869e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0088c622068f90b08",
            "private_dns": "ip-10-0-101-18.ec2.internal",
            "private_ip": "10.0.101.18",
            "public_dns": "ec2-18-214-246-143.compute-1.amazonaws.com",
            "public_ip": "18.214.246.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07275c328a5496b61",
            "association_id": "eipassoc-055d8b09dbd9f1bc0",
            "domain": "vpc",
            "id": "eipalloc-07275c328a5496b61",
            "network_border_group": "us-east-1",
            "network_interface": "eni-080d3e61fa0cb2069",
            "private_dns": "ip-10-0-102-45.ec2.internal",
            "private_ip": "10.0.102.45",
            "public_dns": "ec2-54-208-59-162.compute-1.amazonaws.com",
            "public_ip": "54.208.59.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0960412ca88cd4611",
            "association_id": "eipassoc-0caf96b885f1313eb",
            "domain": "vpc",
            "id": "eipalloc-0960412ca88cd4611",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06f46ca2b5157bab4",
            "private_dns": "ip-10-0-103-90.ec2.internal",
            "private_ip": "10.0.103.90",
            "public_dns": "ec2-34-197-233-79.compute-1.amazonaws.com",
            "public_ip": "34.197.233.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-us-east-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:internet-gateway/igw-09137a8d3afa2cf07",
            "id": "igw-09137a8d3afa2cf07",
            "owner_id": "364203099100",
            "tags": {
              "Environment": "dev",
              "Name": "Prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058681aa48582869e",
            "association_id": "eipassoc-004f921cf61151414",
            "connectivity_type": "public",
            "id": "nat-0316cab449742e5d6",
            "network_interface_id": "eni-0088c622068f90b08",
            "private_ip": "10.0.101.18",
            "public_ip": "18.214.246.143",
            "subnet_id": "subnet-01581b5254c1519ad",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07275c328a5496b61",
            "association_id": "eipassoc-055d8b09dbd9f1bc0",
            "connectivity_type": "public",
            "id": "nat-04f58758db0da7b37",
            "network_interface_id": "eni-080d3e61fa0cb2069",
            "private_ip": "10.0.102.45",
            "public_ip": "54.208.59.162",
            "subnet_id": "subnet-0323d6d1136f5129c",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0960412ca88cd4611",
            "association_id": "eipassoc-0caf96b885f1313eb",
            "connectivity_type": "public",
            "id": "nat-0f3f533df539a309d",
            "network_interface_id": "eni-06f46ca2b5157bab4",
            "private_ip": "10.0.103.90",
            "public_ip": "34.197.233.79",
            "subnet_id": "subnet-0e882366ac52354e6",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-us-east-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08a55b282f4f73d3f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0316cab449742e5d6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08a55b282f4f73d3f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05ca629eaee1630ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04f58758db0da7b37",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05ca629eaee1630ca",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03742518beafd427d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f3f533df539a309d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03742518beafd427d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09137a8d3afa2cf07",
            "id": "r-rtb-0f436c0e9ee1a39051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f436c0e9ee1a3905",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:route-table/rtb-08a55b282f4f73d3f",
            "id": "rtb-08a55b282f4f73d3f",
            "owner_id": "364203099100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0316cab449742e5d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:route-table/rtb-05ca629eaee1630ca",
            "id": "rtb-05ca629eaee1630ca",
            "owner_id": "364203099100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04f58758db0da7b37",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:route-table/rtb-03742518beafd427d",
            "id": "rtb-03742518beafd427d",
            "owner_id": "364203099100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f3f533df539a309d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:route-table/rtb-0f436c0e9ee1a3905",
            "id": "rtb-0f436c0e9ee1a3905",
            "owner_id": "364203099100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09137a8d3afa2cf07",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Prod-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f11a243c6b4094a6",
            "route_table_id": "rtb-08a55b282f4f73d3f",
            "subnet_id": "subnet-0db02f391a215cdde"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050e805ba969d5142",
            "route_table_id": "rtb-05ca629eaee1630ca",
            "subnet_id": "subnet-06ba1e3c99e5b864d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029afffcc522d9626",
            "route_table_id": "rtb-03742518beafd427d",
            "subnet_id": "subnet-0bda508e6425496e1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6fbcd84029d0bef",
            "route_table_id": "rtb-0f436c0e9ee1a3905",
            "subnet_id": "subnet-01581b5254c1519ad"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b51911cc5ecbccd1",
            "route_table_id": "rtb-0f436c0e9ee1a3905",
            "subnet_id": "subnet-0323d6d1136f5129c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06095e2ea6b1ad497",
            "route_table_id": "rtb-0f436c0e9ee1a3905",
            "subnet_id": "subnet-0e882366ac52354e6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:subnet/subnet-0db02f391a215cdde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db02f391a215cdde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364203099100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:subnet/subnet-06ba1e3c99e5b864d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ba1e3c99e5b864d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364203099100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:subnet/subnet-0bda508e6425496e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bda508e6425496e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364203099100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:subnet/subnet-01581b5254c1519ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01581b5254c1519ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364203099100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:subnet/subnet-0323d6d1136f5129c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0323d6d1136f5129c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364203099100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:subnet/subnet-0e882366ac52354e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e882366ac52354e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364203099100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Prod-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f9b9a3be77697c2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:364203099100:vpc/vpc-0f9b9a3be77697c2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce4890b28e702605",
            "default_route_table_id": "rtb-0666a16660f8f96a5",
            "default_security_group_id": "sg-0b86454c51935fc37",
            "dhcp_options_id": "dopt-01dec260013f44bb4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9b9a3be77697c2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0666a16660f8f96a5",
            "owner_id": "364203099100",
            "tags": {
              "Environment": "dev",
              "Name": "Prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Prod",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}